--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>PioneerUI - for Testing Usage</title>
+    <script src="static/laydate/laydate.js"></script>
   </head>
 
   <!-- BODY options, add following classes to body to change options
@@ -39,4 +40,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
