--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>先锋-Pioneer</title>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>先锋Pioneer</title>
+
     <link rel="stylesheet" href="/static/laydate/theme/default/laydate.css">
     <script src="static/laydate/laydate.js"></script>
   </head>
