--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <link rel="stylesheet" href="/static/laydate/theme/default/laydate.css">
     <script src="static/laydate/laydate.js"></script>
+    <script>
+      const basePath = 'http://192.168.55.103:30000'
+    </script>
   </head>
 
   <!-- BODY options, add following classes to body to change options
