--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/laydate/theme/default/laydate.css">
     <script src="static/laydate/laydate.js"></script>
     <script>
+      let token = ''
       const basePath = 'http://localhost:30000'
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
