更新build script.导出到pioneer的文件夹下

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>先锋-Pioneer</title>
+    <link rel="shortcut icon" href="/static/img/logo.png">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
