更新build script.导出到pioneer的文件夹下

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="/static/laydate/theme/default/laydate.css">
     <script src="static/laydate/laydate.js"></script>
     <script>
+
       let token = ''
+      //MODIFY HERE BEFORE DEPLOY!
       const basePath = 'http://localhost:30000'
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
