--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script>
       let token = '';
       //MODIFY HERE BEFORE DEPLOY!
-      const basePath = 'http://localhost:30000';
-      // const basePath = 'http://192.168.1.6:30000';
+      // const basePath = 'http://localhost:30000';
+      const basePath = 'http://192.168.1.6:30000';
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
       }
