--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <link rel="shortcut icon" href="/static/img/logo.png">
     <link rel="stylesheet" href="/static/laydate/theme/default/laydate.css">
-
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
