--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
       //MODIFY HERE BEFORE DEPLOY!
       const basePath = 'http://localhost:30000';
       // const basePath = 'http://192.168.1.6:30000';
+
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
       }
+
+      function date2Str(x, y) {
+        let z = { M: x.getMonth() + 1, d: x.getDate(), h: x.getHours(), m: x.getMinutes(), s: x.getSeconds() };
+        y = y.replace(/(M+|d+|h+|m+|s+)/g, function (v) { return ((v.length > 1 ? "0" : "") + eval('z.' + v.slice(-1))).slice(-2) });
+        return y.replace(/(y+)/g, function (v) { return x.getFullYear().toString().slice(-v.length) });
+      }
+
     </script>
   </head>
 
