修改成绩修复功能

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       let token = '';
 
       //MODIFY HERE BEFORE DEPLOY!
-      // const basePath = 'http://localhost:30000';
-      const basePath = 'http://119.27.188.232:30000';
+      const basePath = 'http://localhost:30000';
+      // const basePath = 'http://119.27.188.232:30000';
 
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
