更新左边导航栏图标

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="shortcut icon" href="/static/img/logo.png">
 
+    <script src="./static/dataTool.js"></script>
+
     <script>
       let token = '';
 
