--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 
     <link rel="shortcut icon" href="/static/img/logo.png">
 
-    <script src="./static/dataTool.js"></script>
-
     <script>
       let token = '';
 
       //MODIFY HERE BEFORE DEPLOY!
       const basePath = 'http://localhost:30000';
-      // const basePath = 'http://119.27.188.232:30000';
+      // const basePath = 'http://www.xianfengedu.org';
 
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
