修改页面，更好的支持小屏幕

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       //MODIFY HERE BEFORE DEPLOY!
       const basePath = 'http://localhost:30000';
-      // const basePath = 'http://www.xianfengedu.org';
+      // const basePath = 'http://119.27.188.232';
 
       function isNotEmpty (value) {
         return value !== '' && value !== undefined && value !== null
