--- a/index.html
+++ b/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>PIONEER::PCP</title>
+<head>
+  <title>PIONEER::PCP</title>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="shortcut icon" href="/static/img/logo.png">
+  <link rel="shortcut icon" href="/static/img/logo.png">
 
-    <script>
-      let token = '';
+  <script>
+    let token = '';
 
-      //MODIFY HERE BEFORE DEPLOY!
-      const basePath = 'http://localhost:30000';
-      // const basePath = 'http://119.27.188.232';
+    //MODIFY HERE BEFORE DEPLOY!
+    // const basePath = 'http://localhost:30000';
 
-      function isNotEmpty (value) {
-        return value !== '' && value !== undefined && value !== null
-      }
+    // const basePath = 'http://140.246.225.226';
+    const basePath = 'http://119.27.188.232';
 
-      function date2Str(x, y) {
-        let z = { M: x.getMonth() + 1, d: x.getDate(), h: x.getHours(), m: x.getMinutes(), s: x.getSeconds() };
-        y = y.replace(/(M+|d+|h+|m+|s+)/g, function (v) { return ((v.length > 1 ? "0" : "") + eval('z.' + v.slice(-1))).slice(-2) });
-        return y.replace(/(y+)/g, function (v) { return x.getFullYear().toString().slice(-v.length) });
-      }
+    function isNotEmpty(value) {
+      return value !== '' && value !== undefined && value !== null
+    }
 
-    </script>
-  </head>
+    function date2Str(x, y) {
+      let z = {M: x.getMonth() + 1, d: x.getDate(), h: x.getHours(), m: x.getMinutes(), s: x.getSeconds()};
+      y = y.replace(/(M+|d+|h+|m+|s+)/g, function (v) {
+        return ((v.length > 1 ? "0" : "") + eval('z.' + v.slice(-1))).slice(-2)
+      });
+      return y.replace(/(y+)/g, function (v) {
+        return x.getFullYear().toString().slice(-v.length)
+      });
+    }
 
-  <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
-    <div id="app"></div>
-  </body>
+  </script>
+</head>
+
+<body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+<div id="app"></div>
+</body>
 
 </html>
